Fix image size
Absolute positioning will prevent the image from expandng on the height and making the images look weird

--- a/client/src/app/recipes/recipes-list/recipes-list.component.css
+++ b/client/src/app/recipes/recipes-list/recipes-list.component.css
@@ -11,3 +11,7 @@
   width: 100%;
   height: 100%;
 }
+
+.header-wrapper {
+  position: absolute;
+}
